# GameEngine

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile.sh  main.cpp
engine/: Application.cpp  Application.hpp  EventDispatcher.hpp  Logger.cpp  Logger.hpp  StateManager.cpp  StateManager.hpp
engine/EventListeners/: Close.hpp  Key.hpp  MouseButton.hpp  MouseFocus.hpp  MouseMove.hpp  MouseWheel.hpp  Resize.hpp
engine/GUI/: Background.cpp  Background.hpp  Box.cpp  Box.hpp  Button.cpp  Button.hpp  Env.cpp  Env.hpp  GUI.cpp  GUI.hpp  Input.cpp  Input.hpp  MessageBox.cpp  MessageBox.hpp  Modal.cpp  Modal.hpp  Parent.cpp  Parent.hpp  Root.cpp  Root.hpp  Widget.cpp  Widget.hpp
engine/Graphics/: AnimatedSprite.cpp  AnimatedSprite.hpp  Animation.cpp  FPSCounter.cpp  FPSCounter.hpp  FontLoader.cpp  FontLoader.hpp  GIF.hpp  Window.cpp  Window.hpp
engine/States/: State.cpp  State.hpp
engine/Utils/: Signal.hpp  Singleton.hpp
src/: Application.cpp  Application.hpp  EventDispatcher.cpp  StateManager.cpp
src/EventListeners/: Focus.hpp  IEventListener.hpp  Text.hpp
src/GUI/: Box.cpp  Box.hpp  GUI.cpp  MessageBox.cpp  Modal.cpp  Modal.hpp  Widget.cpp
src/Graphics/: Animation.hpp  FPSCounter.hpp  FontLoader.hpp  GIF.cpp  GIF.hpp  Window.cpp  Window.hpp
src/States/: State.cpp  State.hpp
src/Utils/: Signal.hpp  Singleton.hpp
tests/: main.cpp
tests/States/: Menu.hpp  Test.hpp
